--- a/assets/style/variable.scss
+++ b/assets/style/variable.scss
@@ -13,6 +13,7 @@ $color-bg-orange: orange;
 $color-primary-sub-opacity-box: #e9f0d5;
 $color-gray: #6b7280;
 $color-text-danger: #dc3545;
+
 $color-text-success: #198754;
 $color-text-warning: #ffca2c;
 $color-text-primary: #0b5ed7;
@@ -22,6 +23,12 @@ $color-text-admin: #1e293b;
 $color-text-admin-dark: #0f172a;
 $color-text-admin-gray: #d6d7d9;
 $color-text-admin-sub-dark: #334155;
+$color-text-admin-white: white;
+
+:root{
+  --color-text-danger: #dc3545;
+  $color-text-danger: #dc3545;
+}
 *{
   color: $color-text-black;
 }
