--- a/assets/style/styles.scss
+++ b/assets/style/styles.scss
@@ -10,3 +10,50 @@ ul, li{
 .max-w-150{
   max-width: 150px !important;
 }
+.btn-icon{
+  border: none;
+  background: none;
+}
+
+::v-deep .ql-editor > * {
+  color: var(--color-admin-3) !important
+}
+::v-deep .ql-editor{
+  height: 200px;
+}
+.ql-snow .ql-editor img {
+  max-width: 100px !important;
+  margin: 10px !important;
+  border-radius: 10px !important;
+  border: 2px solid rgba(146, 160, 82, 0.5);
+}
+::v-deep .ql-container.ql-snow{
+  height: 200px;
+}
+::v-deep .ql-container.ql-snow .ql-editor{
+  height: 200px !important;
+  overflow-y: scroll;
+}
+
+
+/* width */
+::v-deep ::-webkit-scrollbar {
+  width: 5px !important;
+}
+
+/* Track */
+::v-deep ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.57) !important;
+  border-radius: 20px !important;
+}
+
+/* Handle */
+::v-deep ::-webkit-scrollbar-thumb {
+  background: rgba(128, 128, 128, 0.28) !important;
+  border-radius: 20px !important;
+}
+
+/* Handle on hover */
+::v-deep ::-webkit-scrollbar-thumb:hover {
+  background: rgba(128, 128, 128, 0.41) !important;
+}
